--- a/Javajam8/javajam.css
+++ b/Javajam8/javajam.css
@@ -85,6 +85,17 @@ footer { background-color: #D2B48C;
 		 padding-bottom: 1em;
 		 border-top: 2px solid #8C3826;
 }
+table {
+	width: 90%;
+	margin: auto;
+	border-spacing: 0;
+}
+td, th {
+	padding: 10px;
+}
+tr:nth-of-type(odd) {
+	background-color: #d2b48e
+}
  @media (min-width: 600px) { 
 		header { 	padding-left: 0; 
 				text-align: center; }
