--- a/Javajam12/javajam.css
+++ b/Javajam12/javajam.css
@@ -117,6 +117,23 @@ audio {
 	margin-top: 1em;
 }
 
+.item {
+	background-color: #faf9f7;
+	margin: 1em;
+	padding: 1em;
+	overflow: auto;
+}
+
+.item img {
+	float: right;
+}
+
+#herocouch {
+	background-image: url(herocouch.jpg);
+	height: 300px;
+	background-repeat: no-repeat;
+	background-size: 100% 100%; 
+}
 
 @media (min-width: 600px) { 
 		header { 	padding-left: 0; 
